<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="loading">Загрузка…</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="help">Помочь</string>
    <string name="history">История</string>
    <string name="profile">Профиль</string>
    <string name="filter">Фильтр</string>
    <string name="field_activity">Сфера деятельности</string>
    <string name="birthday">Дата рождния</string>
    <string name="edit">Редактировать</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="friends">Ваши друзья</string>
    <string name="get_push_notification">Получать push-уведомления</string>
    <string name="search_by_events">По мероприятиям</string>
    <string name="search_by_nko">По НКО</string>
    <string name="search_hint">Введите название организации</string>
    <string name="search_event_name">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="search_event_not_found">К сожалению по вашему вопросу ничего не найдено</string>
    <string name="example">Например,</string>
    <string name="link_example">мастер-класс, помощь</string>
    <string name="search_result">Результаты поиска: "</string>
    <string name="keywords">Ключевые слова: "</string>
    <string name="empty_history">История пуста</string>
    <string name="press_help">Нажите «Помочь», чтобы принять участие</string>
    <string name="not_participate">Вы еще не участвовали ни в одном мероприятии.</string>
    <string name="second_name">Ваша фамилия</string>
    <string name="your_name">Ваше имя</string>
    <string name="input_second_name">Введите фамилию</string>
    <string name="input_first_name">Введите имя</string>
    <string name="ok">Ок</string>
    <string name="save">Сохранить</string>
    <string name="change_photo">Сменить фото</string>
    <string name="date_birth">Дата рождения</string>
    <string name="field_of_activity">Заполните Вашу сферу деятельности</string>
    <string name="fill_field_of_activity">Заполните Вашу сферу деятельности, чтобы быть наиболее полезным</string>
    <string name="password">Пароль</string>
    <string name="enter_email">Введите ваш email</string>
    <string name="email_for_notification">E-mail для уведомлений</string>
    <string name="input_number_phone">Введите номер телефона</string>
    <string name="number_phone">Номер телефона</string>
    <string name="cancel">Отмена</string>
    <string name="fio">%s %s</string>
    <string name="have_questions">У вас есть вопросы?</string>
    <string name="contact_us">Напишите нам</string>
    <string name="organization_website">Перейти на сайт организаии</string>
    <string name="send_via">Отправить с помощью:</string>
    <string name="rest_days">%s (%s – %s)</string>
    <string name="share">Поделиться</string>
    <string name="to_help_things">Помочь \nвещами</string>
    <string name="help_with_things">Помощь вещами</string>
    <string name="become_volunteer">Стать \nволонтером</string>
    <string name="professional_help">Проф. \nпомощь</string>
    <string name="to_help_money">Помочь \nденьгами</string>
    <string name="help_with_money">Помощь деньгами</string>
    <string name="count_images">%d из %d</string>
    <string name="plus">+%1$d</string>
    <string name="how_to_help">Как вы хотите помочь?</string>
    <string name="things">Вещами</string>
    <string name="money">Деньгами</string>
    <string name="volunteering_1">Волонтерство</string>
    <string name="volunteering_2">Волонтерством</string>
    <string name="prof_help_1">Проф. помощью</string>
    <string name="prof_help_2">Проф. помощь</string>
    <string name="open_via">Открыть с помощью:</string>
    <string name="transfer">Перевести</string>
    <string name="thanks_for_help">Спасибо за решение помочь!</string>
    <string name="choose_size_donation">Выберите размер пожертвования</string>
    <string name="enter_desired_amount">или введите нужную сумму</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="enter_correct_amount">Введите корректную сумму</string>
    <string name="thanks_for_you_help">Спасибо за Вашу помощь!)</string>
    <string name="_100_rub">100 ₽</string>
    <string name="_500_rub">500 ₽</string>
    <string name="_1000_rub">1000 ₽</string>
    <string name="_2000_rub">2000 ₽</string>
    <string name="leave_your_phone">Оставьте свой телефон</string>
    <string name="phone_mask">+7 (___) ___-__-__</string>
    <string name="wrong_phone">Некорректный номер телефона</string>
    <string name="wrong_email">Некорректный email</string>
    <string name="or_email">или e-mail</string>
    <string name="input_email">Введите e-mail</string>
    <string name="what_specialization">Укажите специализацию</string>
    <string name="specify_specialization_which_can_help">и укажите специализацию, в которой можете помочь</string>
    <string name="we_will_contact_you">Мы с вами свяжемся.</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete">Удалить</string>
    <string name="download_report">Скачать отчет</string>
    <string name="completed_in">Завершено: %s %s</string>
    <string name="select_category">Выберите категорию помощи</string>
    <string name="children">Дети</string>
    <string name="adults">Взрослые</string>
    <string name="elderly">Пожилые</string>
    <string name="pets">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="current">Текущие</string>
    <string name="completed">Завершенные</string>

    <plurals name="days_plural">
        <item quantity="zero">Осталось %1$d дней</item>
        <item quantity="one">Остался %1$d день</item>
        <item quantity="two">Осталось %1$d дня</item>
        <item quantity="few">Осталось %1$d дня</item>
        <item quantity="many">Осталось %1$d дней</item>
        <item quantity="other">Осталось %1$d дней</item>
    </plurals>

    <plurals name="organization_plural">
        <item quantity="zero">организаций</item>
        <item quantity="one">%1$d организация</item>
        <item quantity="two">%1$d организации</item>
        <item quantity="few">%1$d организации</item>
        <item quantity="many">%1$d организаций</item>
        <item quantity="other">%1$d организаций</item>
    </plurals>

    <string-array name="items_choice">
        <item>Выбрать фото</item>
        <item>Сделать снимок</item>
        <item>Удалить</item>
    </string-array>

</resources>
