<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/make_photo_btn"
        style="@style/DialogChooserButton"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:drawableStart="@drawable/upload"
        android:text="@string/choose_photo" />

    <Button
        android:id="@+id/pick_photo_btn"
        style="@style/DialogChooserButton"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:drawableStart="@drawable/camera"
        android:text="@string/take_photo" />

    <Button
        android:id="@+id/delete_btn"
        style="@style/DialogChooserButton"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:drawableStart="@drawable/delete"
        android:text="@string/delete" />

</LinearLayout>