<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearanceFIO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/thanks_for_help"
        android:textSize="20sp" />

    <TextView
        style="@style/TextAppearanceDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/leave_your_phone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:focusableInTouchMode="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/InputTextError"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/phone"
            style="@style/TextAppearanceProfileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:hint="@string/phone_mask"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/TextAppearanceDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/or_email" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:focusableInTouchMode="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/InputTextError"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/email"
            style="@style/TextAppearanceProfileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_prof"
        style="@style/TextAppearanceDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="0dp"
        android:text="@string/specify_specialization_which_can_help"
        android:visibility="gone" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/field_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:focusableInTouchMode="true"
        android:visibility="gone"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/InputTextError"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/field_activity"
            style="@style/TextAppearanceProfileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:hint="@string/what_specialization"
            android:inputType="textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/TextAppearanceDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:gravity="center_horizontal"
        android:text="@string/we_will_contact_you" />

</LinearLayout>