<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:theme="@style/ToolbarColoredBackArrow">

        <TextView
            android:id="@+id/title_toolbar"
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit" />

    </android.support.v7.widget.Toolbar>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image_user"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/user_icon"
        app:riv_mutate_background="true"
        app:riv_oval="true"
        app:riv_tile_mode="repeat"
        app:srcCompat="@drawable/user_icon" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/blackout_layer"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        app:riv_corner_radius="5dip"
        app:riv_mutate_background="false"
        app:riv_oval="true"
        app:riv_tile_mode="repeat" />

    <TextView
        android:id="@+id/change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_user"
        android:layout_alignEnd="@+id/image_user"
        android:layout_alignStart="@+id/image_user"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="42dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4sp"
        android:text="@string/change_photo"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_user"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/image_user"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="4sp"
        android:text="@string/second_name"
        android:textColor="@color/grey_100"
        android:textSize="12sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/second_name"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:fontFamily="sans-serif"
        android:hint="@string/input_second_name"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/dark_black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/second_name"
        android:layout_below="@+id/second_name"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="4sp"
        android:text="@string/your_name"
        android:textColor="@color/grey_100"
        android:textSize="12sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_user"
        android:layout_alignStart="@+id/textView2"
        android:fontFamily="sans-serif"
        android:hint="@string/input_first_name"
        android:inputType="textPersonName"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/dark_black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <include
        android:id="@+id/include"
        layout="@layout/divider_layout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="20dp" />

</RelativeLayout>
