<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver">

    <ImageView
        android:id="@+id/image_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:src="@drawable/icon_zoom" />

    <TextView
        android:id="@+id/text_search_event"
        style="@style/TextAppearanceDescriptionAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_zoom"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="58dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="37.5dp"
        android:gravity="center_horizontal"
        android:text="@string/search_event_name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_search_event"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_example"
            style="@style/TextAppearanceDescriptionAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="end"
            android:text="@string/example" />

        <TextView
            android:id="@+id/text_link"
            style="@style/TextAppearanceLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:text="@string/link_example" />

    </LinearLayout>

</RelativeLayout>
